ENH: Update ifrs17sim to pay out profits

--- a/lifelib/projects/ifrs17sim/ifrs17sim_ifrs_waterfall.ipynb
+++ b/lifelib/projects/ifrs17sim/ifrs17sim_ifrs_waterfall.ipynb
@@ -137,7 +137,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "estcf = get_waterfalldata(\n",
@@ -167,7 +169,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "csmrf = get_waterfalldata(\n",
@@ -194,23 +198,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "actcf = get_waterfalldata(\n",
     "            proj,\n",
-    "            items=['AccumCF',\n",
-    "                   'PremIncome',\n",
+    "            items=['PremIncome',\n",
     "                   'IntAccumCF',\n",
     "                   'ExpsAcqTotal',\n",
     "                   'BenefitTotal',\n",
-    "                   'ExpsMaintTotal'],\n",
+    "                   'ExpsMaintTotal',\n",
+    "                   'ActualNetCF'],\n",
     "            length=3,\n",
     "            reverseitems=['ExpsAcqTotal',\n",
-    "                       'BenefitTotal',\n",
-    "                       'ExpsMaintTotal'])\n",
+    "                          'BenefitTotal',\n",
+    "                          'ExpsMaintTotal'])\n",
     "    \n",
-    "draw_waterfall(actcf, title='Actual Cashflows')"
+    "draw_waterfall(actcf, stocks=[0, 5], title='Actual Cashflows')"
    ]
   },
   {
@@ -225,19 +231,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ifrspl = get_waterfalldata(\n",
     "            proj,\n",
-    "            items=['NetBalance',\n",
-    "                   'InsurRevenue',\n",
+    "            items=['InsurRevenue',\n",
     "                   'InsurServiceExps',\n",
-    "                   'InsurFinIncomeExps'],\n",
+    "                   'InsurFinIncomeExps',\n",
+    "                   'ProfitBefTax'],\n",
     "            length=5,\n",
     "            reverseitems=['InsurServiceExps'])\n",
     "\n",
-    "draw_waterfall(ifrspl, title='IFRS17 Profit/Loss')"
+    "draw_waterfall(ifrspl, stocks=[0, 3], title='IFRS17 Profit/Loss')"
    ]
   }
  ],
