ENH: Add new notebook, IFRS17 Simulation (Lapse Scenario)

--- a/lifelib/projects/ifrs17sim/ifrs17sim_charts_baseline.ipynb
+++ b/lifelib/projects/ifrs17sim/ifrs17sim_charts_baseline.ipynb
@@ -4,8 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# IFRS17 waterfall chart notebook\n",
-    "To run this notebook and get all the outputs below, Go to the **Cell** menu above, and then click **Run All**."
+    "# IFRS17 Simulation (Baseline)\n",
+    "\n",
+    "If you're viewing this page as a static HTML page on https://lifelib.io, the same contents are also available [here on binder] as Jupyter notebook executable online (it may take a while to load)\n",
+    "\n",
+    "To run this notebook and get all the outputs below, Go to the **Cell** menu above, and then click **Run All**.\n",
+    "\n",
+    "[here on binder]: https://mybinder.org/v2/gh/fumitoh/lifelib/binder?filepath=lifelib%2Fprojects%2Fifrs17sim%2Fifrs17sim_charts_baseline.ipynb"
    ]
   },
   {
@@ -39,7 +44,7 @@
     "  <li>All expenses are included in insurance cashflows.</li>\n",
     "  <li>Loss component logic is not yet incorporated, so `CSM_Unfloored` can be negative.</li>\n",
     "  <li>Coverage unit is set to sum assured</li>\n",
-    "  <li>Amortization of acquisition cash flows is not yet implemented.</li>\n",
+    "  <li>The amortization schedule of acquisition cashflows is constant over time.</li>\n",
     "  <li>All insurance cashflows are considered non-market sensitive, i.e. no TVOG is considered.</li>\n",
     "  <li>Risk adjustment is not yet modeled.</li>\n",
     "</ul>\n",
@@ -265,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
