ENH: Replace CSM_Unfloored with CSM

--- a/lifelib/projects/ifrs17sim/ifrs17sim_csm_waterfall.ipynb
+++ b/lifelib/projects/ifrs17sim/ifrs17sim_csm_waterfall.ipynb
@@ -30,7 +30,7 @@
     "<ul>\n",
     "  <li>The timing of cashflows is either the beginning or end of each step.</li>\n",
     "  <li>All expenses are included in insurance cashflows.</li>\n",
-    "  <li>Loss component logic is not yet incorporated, so `CSM_Unfloored` can be negative.</li>\n",
+    "  <li>Loss component logic is not yet incorporated, so `CSM` can be negative.</li>\n",
     "  <li>Coverage unit is set to sum assured</li>\n",
     "  <li>Amortization of acquisition cash flows is not yet implemented.</li>\n",
     "  <li>All insurance cashflows are considered non-market sensitive, i.e. no TVOG is considered.</li>\n",
@@ -73,7 +73,7 @@
     "\n",
     "df = get_waterfalldata(\n",
     "     proj,\n",
-    "     items=['CSM_Unfloored',\n",
+    "     items=['CSM',\n",
     "            'IntAccrCSM',\n",
     "            'AdjCSM_FlufCF',\n",
     "            'TransServices'],\n",
@@ -194,7 +194,7 @@
    "source": [
     "df = get_waterfalldata(\n",
     "     proj,\n",
-    "     items=['CSM_Unfloored',\n",
+    "     items=['CSM',\n",
     "            'IntAccrCSM',\n",
     "            'AdjCSM_FlufCF',\n",
     "            'TransServices'],\n",
