FIX: Links in smithwilson project

--- a/lifelib/projects/smithwilson/smithwilson-overview.ipynb
+++ b/lifelib/projects/smithwilson/smithwilson-overview.ipynb
@@ -10,7 +10,8 @@
     "\n",
     "The Smith-Wilson model calculates extraporated interest rates using the Smith-Wilson method.\n",
     "\n",
-    "The Smith-Wilson method is used for extraporating risk-free interest rates under the Solvency II framework. The method is described in details in [QIS 5 Risk-free interest rates – Extrapolation method](https://eiopa.europa.eu/Publications/QIS/ceiops-paper-extrapolation-risk-free-rates_en-20100802.pdf), a technical paper issued by CEIOPS(the predecessor of EIOPA). Formulas and variables in this notebook are named consistently with the mathmatical symbols in the technical paper.\n",
+    "The Smith-Wilson method is used for extraporating risk-free interest rates under the Solvency II framework. The method is described in details in *QIS 5 Risk-free interest rates – Extrapolation method*, [a technical paper](https://eiopa.europa.eu/Publications/QIS/ceiops-paper-extrapolation-risk-free-rates_en-20100802.pdf) issued by CEIOPS(the predecessor of EIOPA). The technical paper is available on [EIOPA's web site](https://eiopa.europa.eu/publications/qis/insurance/insurance-quantitative-impact-study-5/background-documents).\n",
+    "Formulas and variables in this notebook are named consistently with the mathmatical symbols in the technical paper.\n",
     "\n",
     "This project is inspired by a pure Python implementation of Smith-Wilson\n",
     "yield curve fitting algorithm created by Dejan Simic.\n",
