FIX: HTML build due to sphinx-gallery update

--- a/lifelib/projects/ifrs17sim/ifrs17sim_charts_baseline.ipynb
+++ b/lifelib/projects/ifrs17sim/ifrs17sim_charts_baseline.ipynb
@@ -126,7 +126,7 @@
    },
    "outputs": [],
    "source": [
-    "model = ifrs17sim.build(load_saved=True)\n",
+    "model = ifrs17sim.build(load_saved=False)\n",
     "proj = model.OuterProj[1]"
    ]
   },
