FIX: ifrs17sim add SurrRateMult in Projection

--- a/lifelib/projects/ifrs17sim/ifrs17sim_charts_lapsescen.ipynb
+++ b/lifelib/projects/ifrs17sim/ifrs17sim_charts_lapsescen.ipynb
@@ -164,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proj.SurrRateMult.formula"
+    "proj.asmp.SurrRateMult.formula"
    ]
   },
   {
@@ -182,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inner.SurrRateMult.formula"
+    "inner.asmp.SurrRateMult.formula"
    ]
   },
   {
@@ -199,12 +199,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proj.SurrRateMult[1] = 1\n",
-    "proj.SurrRateMult[2] = 2       # Actual lapse rate from t=2 \n",
+    "proj.asmp.SurrRateMult[1] = 1\n",
+    "proj.asmp.SurrRateMult[2] = 2       # Actual lapse rate from t=2 \n",
     "\n",
-    "inner[1].SurrRateMult[1] = 1\n",
-    "inner[2].SurrRateMult[2] = 1\n",
-    "inner[3].SurrRateMult[3] = 2   # The lapse assumption for estimated cashflows at t=3 and thereafter "
+    "inner[1].asmp.SurrRateMult[1] = 1\n",
+    "inner[2].asmp.SurrRateMult[2] = 1\n",
+    "inner[3].asmp.SurrRateMult[3] = 2   # The lapse assumption for estimated cashflows at t=3 and thereafter "
    ]
   },
   {
