FIX: Change kernelspec in generate_model_points.ipynb

--- a/lifelib/libraries/basiclife/generate_model_points.ipynb
+++ b/lifelib/libraries/basiclife/generate_model_points.ipynb
@@ -272,9 +272,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "modintest",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "modintest"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
