DOC: Update notebooks and docs

--- a/lifelib/libraries/basiclife/generate_model_points.ipynb
+++ b/lifelib/libraries/basiclife/generate_model_points.ipynb
@@ -4,36 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sample modelpoint data for standard model implementations"
+    "# Generating model points"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model Point File\n",
+    "This notebook generates the sample model points used by the `BasicTerm_S` and `BasicTerm_M` model, by using random numbers.\n",
+    "`BasicTerm_S` and `BasicTerm_M` are new business models, so no duration information is included.\n",
     "\n",
-    "The model point file contains model point data in tabular format. \n",
-    "The records of the file represent model points, and the columns represents model point attributes.\n",
-    "The first record contains a string column header whose values can be used as the attribute names.\n",
+    "**Columns:**\n",
     "\n",
-    "#### File Format\n",
+    "* `point_id`: Model point identifier\n",
+    "* `age_at_entry`: Issue age. The samples are distributed uniformly from 20 to 59.\n",
+    "* `sex`: \"M\" or \"F\" to indicate policy holder's sex. Not used by default.\n",
+    "* `policy_term`: Policy term in years. The samples are evenly distriubted among 10, 15 and 20.\n",
+    "* `policy_count`: The number of policies. Not used by default. \n",
+    "* `sum_assured`: Sum assured. The samples are uniformly distributed from 10,000 to 1,000,000.\n",
     "\n",
-    "* Excel\n",
-    "\n",
-    "#### Columns\n",
-    "\n",
-    "* **PolicyID**: Model point identifier (Integer or string)\n",
-    "* **ProductID**: Primary key used for assumption and paramter association and for result aggregation (Integer or string)\n",
-    "* **PlanID**: Secondary key used for assumption and paramter association and for result aggregation (Integer or string)\n",
-    "* **Sex**: `M` or `F` to indicate policy holder's sex (String)\n",
-    "* **IssueDate**: Date of issue (Integer, String or a Date type)\n",
-    "* **IssueAge**:  Policyholder's age at issue (Integer)\n",
-    "* **PolicyTerm**: Policy term in years (Integer)\n",
-    "* **PolicyCount**: Number of policies represented by the model point (Integer or Float)\n",
-    "* **SumAssured**: (Average) sum assured amount per policy in an unspecified currency (Integer or Float)\n",
-    "\n",
-    "#### Number of Model Points\n",
+    "**Number of model points:**\n",
     "\n",
     "* 10000\n"
    ]
