--- a/lifelib/libraries/basiclife/generate_model_points_with_duration.ipynb
+++ b/lifelib/libraries/basiclife/generate_model_points_with_duration.ipynb
@@ -4,34 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sample modelpoint data for standard model implementations"
+    "# Generating model points with duration"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model Point File\n",
+    "This notebook is modified from *generate_model_points.ipynb* and\n",
+    "generates the sample model points for the `BasicTerm_SE` and `BasicTerm_ME` model, by using random numbers.\n",
+    "The model ponints have the `duration_mth` attribute, which indicates how many months elapsed from the\n",
+    "issue of each model point to time 0. Negative `duration_mth` indicate future new business.\n",
     "\n",
-    "The model point file contains model point data in tabular format. \n",
-    "The records of the file represent model points, and the columns represents model point attributes.\n",
-    "The first record contains a string column header whose values can be used as the attribute names.\n",
     "\n",
-    "#### File Format\n",
+    "**Columns:**\n",
     "\n",
-    "* Excel\n",
+    "* `point_id`: Model point identifier\n",
+    "* `age_at_entry`: Issue age. The samples are distributed uniformly from 20 to 59.\n",
+    "* `sex`: \"M\" or \"F\" to indicate policy holder's sex. Not used by default.\n",
+    "* `policy_term`: Policy term in years. The samples are evenly distriubted among 10, 15 and 20.\n",
+    "* `policy_count`: The number of policies. Uniformly distributed from 0 to 100.\n",
+    "* `sum_assured`: Sum assured. The samples are uniformly distributed from 10,000 to 1,000,000.\n",
+    "* `duration_mth`: Months elapsed from the issue til t=0. Negative values indicate future new business. Uniformly distributed from -36 to 12 times `policy_term`.  \n",
     "\n",
-    "#### Columns\n",
-    "\n",
-    "* **point_id**: Model point identifier (Integer or string)\n",
-    "* **aget_at_entry**:  Policyholder's age at issue (Integer)\n",
-    "* **sex**: `M` or `F` to indicate policy holder's sex (String)\n",
-    "* **policy_term**: Policy term in years (Integer)\n",
-    "* **policy_count**: Number of policies represented by the model point (Integer or Float). All 1 by default.\n",
-    "* **sum_assured**: (Average) sum assured amount per policy in an unspecified currency (Integer or Float)\n",
-    "* **duration_mth**: Duration in month (Integer). Not used by `BasicTerm_S` and `BasicTerm_M`. Can be negative e.g. -12 means the policy is issued 12 months after time 0. \n",
-    "\n",
-    "#### Number of Model Points\n",
+    "**Number of model points:**\n",
     "\n",
     "* 10000\n"
    ]
@@ -298,9 +294,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:spy4]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-spy4-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -312,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
