DOC: Update docs

--- a/lifelib/libraries/basiclife/create_premium_table.ipynb
+++ b/lifelib/libraries/basiclife/create_premium_table.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "21b0e547",
+   "id": "5ce1139e",
    "metadata": {},
    "source": [
     "# Creating premium table"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55f5b4eb",
+   "id": "53bfe3af",
    "metadata": {},
    "source": [
     "This notebook shows how to create the premium table from `BasicTerm_M` model to be used in `BasicTerm_SE` and `BasicTerm_ME`.\n",
@@ -19,7 +19,7 @@
     "but `BasicTerm_SE` and `BasicTerm_ME` start projections for in-force model points at time zero after their issues, so the present values are not available. Such being the case, a premium rate table needs to be fed into the models.\n",
     "This notebook demonstrates how to create the premium table using `BasicTerm_M` model. \n",
     "\n",
-    "By default, `BasicTerm_M` and `BasicTerm_ME` model the same product using the same assumption, and `BasicTerm_M` is the new business version of `BasicTerm_ME.`\n",
+    "By default, `BasicTerm_M` and `BasicTerm_ME` models the same product using the same assumption, and `BasicTerm_M` is the new business version of `BasicTerm_ME.`\n",
     "\n",
     "Here're the steps to create the premium table.\n",
     "\n",
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "40c7d8fc",
+   "id": "71da5b1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7318d275",
+   "id": "8f00a92a",
    "metadata": {},
    "source": [
     "The code below reads the `BasicTerm_M` model and assign it to `model` and the `Pojection` space to `space` for later use."
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "64456a9c",
+   "id": "cd4d5b2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65463fd1",
+   "id": "4c0adc01",
    "metadata": {},
    "source": [
     "The code below creates the model point table for the premium table.\n",
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1af65f67",
+   "id": "00d461d2",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2e24534",
+   "id": "ea1f8383",
    "metadata": {},
    "source": [
     "The code below replaces the default model point table with the new one just created above."
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "44840626",
+   "id": "9d4cae36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,28 +230,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62b681b1",
+   "id": "ece8e88d",
    "metadata": {},
    "source": [
-    "Since the sum assured of all the model point is 1, `premium_pp` returns 0 because of the rounding operation in its formula. \n",
+    "Since the sum assured of all the model points are all 1, `premium_pp` returns 0 because of the rounding operation in its formula. \n",
     "Below defines the `premium_rate` by modifying the `premium_pp` formula and removing the rounding so that the formula can be used for creating the premium rates."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7eeea31b",
+   "id": "7af10c19",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "def premium_pp(t):\n",
+       "def premium_pp():\n",
        "    \"\"\"Monthly premium per policy\n",
        "\n",
        "    Monthly premium amount per policy defined as::\n",
        "\n",
        "        round((1 + loading_prem()) * net_premium(), 2)\n",
+       "\n",
+       "    .. versionchanged:: 0.2.0\n",
+       "       The ``t`` parameter is removed.\n",
        "\n",
        "    .. seealso::\n",
        "\n",
@@ -274,31 +277,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "87a66a67",
+   "id": "0eb44b4d",
    "metadata": {},
    "outputs": [],
    "source": [
     "@mx.defcells\n",
     "def premium_rate():\n",
-    "    \"\"\"Monthly premium per policy\n",
-    "\n",
-    "    Monthly premium amount per policy defined as::\n",
-    "\n",
-    "        (1 + loading_prem()) * net_premium()\n",
-    "\n",
-    "    .. seealso::\n",
-    "\n",
-    "        * :func:`loading_prem`\n",
-    "        * :func:`net_premium_pp`\n",
-    "\n",
-    "    \"\"\"\n",
     "    return (1 + loading_prem()) * net_premium_pp()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6fc9b3e0",
+   "id": "a2ee55a0",
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4223888",
+   "id": "a1d40c99",
    "metadata": {},
    "source": [
     "The code below creates the premium table as a Series indexed by `age_at_entry` and `policy_term` from the result above.\n",
@@ -357,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "796eb10b",
+   "id": "7bf4d583",
    "metadata": {},
    "outputs": [
     {
