--- a/lifelib/libraries/basiclife/generate_model_points.ipynb
+++ b/lifelib/libraries/basiclife/generate_model_points.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook generates the sample model points used by the `BasicTerm_S` and `BasicTerm_M` model, by using random numbers.\n",
+    "This notebook generates the sample model points used by the `BasicTerm_S` and `BasicTerm_M` models, by using random numbers.\n",
     "`BasicTerm_S` and `BasicTerm_M` are new business models, so no duration information is included.\n",
     "\n",
     "**Columns:**\n",
