--- a/lifelib/libraries/savings/savings_example1.ipynb
+++ b/lifelib/libraries/savings/savings_example1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0c3f73da",
+   "id": "19a8799c",
    "metadata": {},
    "source": [
     "# Simple Stochastic Example\n",
@@ -17,7 +17,7 @@
     "\n",
     "## Change summary\n",
     "\n",
-    "The following page shows complete a comparison of formulas between `CashValue_ME_EX1` and `CashValue_ME` with highlights on updated parts.\n",
+    "The following page shows a complete comparison of formulas between `CashValue_ME_EX1` and `CashValue_ME` with highlights on updated parts.\n",
     "\n",
     "https://www.diffchecker.com/rKGSoxPL\n",
     "\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "943fee36",
+   "id": "de1b5ead",
    "metadata": {},
    "source": [
     "The code below imports essential modules, reads the `CashValue_ME_EX1` model into Python, and defines `proj` as an alias for the `Projection` in the model for convenience. "
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "0d73520b",
+   "id": "86f0bd0b",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d305f13d",
+   "id": "a5e5ad14",
    "metadata": {},
    "source": [
     "## Input data\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "bf1ed3aa",
+   "id": "9b8ed29f",
    "metadata": {},
    "outputs": [
     {
@@ -183,16 +183,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a695d6b4",
+   "id": "5eb5ea76",
    "metadata": {},
    "source": [
-    "The product spec table is slightly modified from the one in `CashValue_ME`. `load_rem_rate` is changed to 0 for the product `A`. In this example, the level of account value against sum assured at issue is controled by `premium_pp` in `model_point_table`, not by `load_prem_rate` in `product_spec_table`."
+    "The product spec table is slightly modified from the one in `CashValue_ME`. `load_prem_rate` is changed to 0 for the product `A`. In this example, the level of account value against sum assured at issue is controled by `premium_pp` in `model_point_table`, not by `load_prem_rate` in `product_spec_table`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "3ce875b6",
+   "id": "df5f1ce1",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad780c4a",
+   "id": "a59c795a",
    "metadata": {},
    "source": [
     "Discount rates are read from *disc_rate_ann.xlsx* into `disc_rate_ann`. To make Monte Calo and Black-Scholes-Merton comparable, a constant continuous compound rate of 2% is assumed for discounting. `disc_rate_ann` holds the annual compound rate converted from the continuous compound rate of 2%. "
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "34adf6b4",
+   "id": "b07e895c",
    "metadata": {},
    "outputs": [
     {
@@ -329,18 +329,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cadf7332",
+   "id": "5d8fd387",
    "metadata": {},
    "source": [
     "## Turing  off policy decrement and fees\n",
     "\n",
-    "To make this example simple, policy decrement and fees are all set to 0 in `CashValue_ME_EX1`. Changes are made to relevant formulas. For example, the formula of `lapse_rate` now return a Series of 0 as shown below. The docstring is not udated from the original formula."
+    "To make this example simple, policy decrement and fees are all set to 0 in `CashValue_ME_EX1`. Changes are made to relevant formulas. For example, the formula of `lapse_rate` now returns a Series of 0 as shown below. The docstring is not udated from the original formula."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "3c93ddca",
+   "id": "dd6540e8",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61b379a7",
+   "id": "8b9363a3",
    "metadata": {},
    "source": [
     "## Adding GMAB\n",
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "0274e5d1",
+   "id": "ae4d72f5",
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "203624d6",
+   "id": "ea467400",
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97fa425b",
+   "id": "23bc61e9",
    "metadata": {},
    "source": [
     "## Making the model stochastic\n",
@@ -477,7 +477,7 @@
     "The approach taken for this example to make `CashValue_ME` stochastic is to index `model_point` not by model point ID, but by the combination of scenaio ID and model point ID.\n",
     "Based on this approach, the `model_point` DataFrame has a MultiIndex, which has two levels, scenario ID denoted by `scen_id` and model point ID denoted by `scen_id`, and now the number of rows in `model_point` is the number of scenaios times the number of model points. For each model point ID, there are identical model points as many as the number of scnarios.\n",
     "\n",
-    "This approach consumes more memory, but the changes to be made in the model are minimal, and the model runs fast because an identical operation on all the model points on all the scenarios can be performed at the same time as a vector operation along the MultiIndex of `model_point`.\n",
+    "This approach consumes more memory, but the changes to be made in the model are minimal, and the model runs fast because an identical operation on all the model points across all the scenarios can be performed at the same time as a vector operation along the MultiIndex of `model_point`.\n",
     "\n",
     "To make `model_point` indexed with `scen_id` and `point_id`, its formula is changed as follows. The docstring is not updated.\n"
    ]
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "72076f65",
+   "id": "8cfdd80e",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecd8d68f",
+   "id": "7cd4bc2c",
    "metadata": {},
    "source": [
     "Now `model_point` looks like below. Since `model_point_table` has only one model point, `model_point` has 10,000 rows. When the current table is replaced with the other one with 9 model points later in this example, `model_point` will have 90,000 rows."
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "5af21150",
+   "id": "55ffb078",
    "metadata": {},
    "outputs": [
     {
@@ -904,18 +904,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3acd2222",
+   "id": "430c1a18",
    "metadata": {},
    "source": [
     "In `CashValue_ME`, `std_norm_rand` is a Series of random numbers read from an input file. In `CashValue_ME_EX1`, `std_norm_rand` generates random numbers that follow the standard normal distribution.\n",
-    "Depending the version of NumPy, a different random number generator is used. `std_norm_rand` generates random numbers for `t=0` through `t=241`.\n",
+    "Depending the version of NumPy, a different random number generator is used. `std_norm_rand` generates random numbers for `t=0` through `t=241`, although scenarios only up to `t=120` are used in this example.\n",
     "For each `t`, 10,000 random numbers are generated.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "2a805b2f",
+   "id": "bca2074f",
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "4f9a8821",
+   "id": "9dbd2175",
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dbb1f5f",
+   "id": "fd3125ec",
    "metadata": {},
    "source": [
     "The graph show how well the 10,000 random numbers generated for `t=0` fit the PDF of the standard normal distribution."
@@ -993,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "b27062bf",
+   "id": "505c28f7",
    "metadata": {},
    "outputs": [
     {
@@ -1022,18 +1022,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47fb0c0b",
+   "id": "08fe82df",
    "metadata": {},
    "source": [
-    "## Account value projection\n",
+    "## Stochastic account value projection\n",
     "\n",
-    "Using on the generated random numbers, the account value is projected. 10,000 paths are generated. The graph below shows the first 100 paths."
+    "Using on the generated random numbers, the account value is projected stochastically. 10,000 paths are generated. The graph below shows the first 100 paths."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "70c03c5b",
+   "id": "328d9494",
    "metadata": {
     "scrolled": true
    },
@@ -1060,14 +1060,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f5d990a",
+   "id": "4d41811f",
    "metadata": {},
    "source": [
-    "The investment return on account value is modeled to follow the following geometric Brownian motion\n",
+    "The investment return on the account value is modeled to follow the geometric Brownian motion:\n",
     "\n",
     "$$\\frac{\\Delta{S}}{S}=r\\Delta{t}+\\sigma\\epsilon\\sqrt{\\Delta{t}}$$\n",
     "\n",
-    "where $\\Delta{S}$ is the change in the account value $S$, in a small interval of time, $\\Delta{t}$, $r$ is the constant risk free rate, $\\sigma$ is the volatility of the account value and $\\epsilon$ is a random number drawn from the standard normal distribution.\n",
+    "where $\\Delta{S}$ is the change in the account value $S$ in a small interval of time, $\\Delta{t}$. $r$ is the constant risk free rate, $\\sigma$ is the volatility of the account value and $\\epsilon$ is a random number drawn from the standard normal distribution.\n",
     "\n",
     "The distibution of the account value at `t=120` follows a log normal distribution. In the expression below, $S_{T}$ and $S_{0}$ denote account value at $t=T$ and $t=0$ respectively. \n",
     "\n",
@@ -1076,7 +1076,7 @@
     "\n",
     "\n",
     "\n",
-    "The graph how well the distribution of $e^{-rT}S_{T}$ the present values of the account value at `t=0`, fits the PDF of a log normal ditribution.\n",
+    "The graph shows how well the distribution of $e^{-rT}S_{T}$, the present values of the account value at `t=0`, fits the PDF of a log normal ditribution.\n",
     "\n",
     "Reference: *Options, Futures, and Other Derivatives* by John C.Hull\n"
    ]
@@ -1084,7 +1084,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "9be71334",
+   "id": "ba314589",
    "metadata": {
     "scrolled": false
    },
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fcce19f",
+   "id": "995b25b3",
    "metadata": {},
    "source": [
     "Since the scenarios are risk neutral, the following equation should hold.\n",
@@ -1127,7 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "25bdcbbb",
+   "id": "dae328bf",
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "93e54dba",
+   "id": "3245c501",
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d71eb0a2",
+   "id": "785aec23",
    "metadata": {},
    "source": [
     "## Comparing Monte Calo with Black-Scholes-Merton formula\n",
@@ -1194,7 +1194,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "12f3dc00",
+   "id": "00cfe8a8",
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bff3689d",
+   "id": "8f86c7bf",
    "metadata": {},
    "source": [
     "To get results for various in-the-moneyness, `model_point_table` is replaced with the other table, `model_point_moneyness`.\n",
@@ -1247,7 +1247,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "77688385",
+   "id": "412f97d5",
    "metadata": {},
    "outputs": [
     {
@@ -1456,7 +1456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb9ebf3f",
+   "id": "31aea256",
    "metadata": {},
    "source": [
     "`pv_claims_over_av('MATURITY')` returns the present value of GMAB payouts in Numpy array. The code below converts the array into Series by adding the MultiIndex of `model_point`."
@@ -1465,7 +1465,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "0c8f7605",
+   "id": "7b72740a",
    "metadata": {},
    "outputs": [
     {
@@ -1498,16 +1498,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e57c620",
+   "id": "2c064821",
    "metadata": {},
    "source": [
-    "By taking the mean of all the scenarios for each `point_id`, the option values by Monte Carlo is obtained."
+    "By taking the mean of all the scenarios for each `point_id`, TVOGs by Monte Carlo are obtained."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "c9196a76",
+   "id": "1b2f195f",
    "metadata": {},
    "outputs": [
     {
@@ -1538,7 +1538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b912a43",
+   "id": "29554786",
    "metadata": {},
    "source": [
     "The code below shows the same results obtained from the Black-Scholes-Merton formula, and the both results are compared and plotted in the graph below."
@@ -1547,7 +1547,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "715b85e3",
+   "id": "e7467b42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1558,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "de1fa059",
+   "id": "3318b2b5",
    "metadata": {},
    "outputs": [
     {
@@ -1589,7 +1589,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "254b55b5",
+   "id": "171d78b2",
    "metadata": {},
    "outputs": [
     {
